build: add audio-extractor project
Signed-off-by: Ricardo Benitez <benitezc.ricardo@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,5 @@ set_project_warnings(project_warnings)
 # add_subdirectory(projects/audio-extractor)
 add_subdirectory(projects/Open-Rival)
 add_subdirectory(projects/setup)
+add_subdirectory(projects/audio-extractor)
 
