build: add campaign-extractor cmake configuration
Signed-off-by: Ricardo Benitez <benitezc.ricardo@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,7 @@ set_project_warnings(project_warnings)
 add_subdirectory(projects/Open-Rival)
 add_subdirectory(projects/setup)
 add_subdirectory(projects/audio-extractor)
+add_subdirectory(projects/campaign-extractor)
+# add_subdirectory(projects/image-extractor)
+# add_subdirectory(projects/interface-extractor)
 
