build: add interface-extractor executable
Signed-off-by: Ricardo Benitez <benitezc.ricardo@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,11 +17,10 @@ include(CMake/CompilerWarnings.cmake)
 set_project_warnings(project_warnings)
 
 #include sub-projects
-# add_subdirectory(projects/audio-extractor)
 add_subdirectory(projects/Open-Rival)
 add_subdirectory(projects/setup)
 add_subdirectory(projects/audio-extractor)
 add_subdirectory(projects/campaign-extractor)
 add_subdirectory(projects/image-extractor)
-# add_subdirectory(projects/interface-extractor)
+add_subdirectory(projects/interface-extractor)
 
