--- a/projects/audio-extractor/CMakeLists.txt
+++ b/projects/audio-extractor/CMakeLists.txt
@@ -16,5 +16,13 @@ set(OPEN_RIVAL_AUDIO_EXTRACTOR_INCLUDE_DIRS
     ${CMAKE_CURRENT_LIST_DIR}
 )
 
-add_executable(audio-extractor ${OPEN_RIVAL_AUDIO_EXTRACTOR_EXTERNAL_SOURCES} ${OPEN_RIVAL_AUDIO_EXTRACTOR_SOURCES})
-target_include_directories(audio-extractor PUBLIC ${OPEN_RIVAL_AUDIO_EXTRACTOR_INCLUDE_DIRS} ${OPEN_RIVAL_SETUP_INC_DIR})
+# Creates the target
+add_executable(audio-extractor
+    ${OPEN_RIVAL_AUDIO_EXTRACTOR_EXTERNAL_SOURCES}
+    ${OPEN_RIVAL_AUDIO_EXTRACTOR_SOURCES}
+)
+
+target_include_directories(audio-extractor PUBLIC
+    ${OPEN_RIVAL_AUDIO_EXTRACTOR_INCLUDE_DIRS}
+    ${OPEN_RIVAL_SETUP_INC_DIR}
+)
