--- a/projects/campaign-extractor/CMakeLists.txt
+++ b/projects/campaign-extractor/CMakeLists.txt
@@ -19,5 +19,12 @@ set(OPEN_RIVAL_CAMPAIGN_EXTRACTOR_INCLUDE_DIRS
     ${CMAKE_CURRENT_LIST_DIR}
 )
 
-add_executable(campaign-extractor ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_EXTERNAL_SOURCES} ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_SOURCES})
-target_include_directories(campaign-extractor PUBLIC ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_INCLUDE_DIRS} ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_EXTERNAL_DIRS})
+# Creates the executable
+add_executable(campaign-extractor
+    ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_EXTERNAL_SOURCES}
+    ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_SOURCES}
+)
+target_include_directories(campaign-extractor PUBLIC
+    ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_INCLUDE_DIRS}
+    ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_EXTERNAL_DIRS}
+)
