--- a/projects/interface-extractor/CMakeLists.txt
+++ b/projects/interface-extractor/CMakeLists.txt
@@ -25,6 +25,10 @@ set(OPEN_RIVAL_INTERFACE_EXTRACTOR_INCLUDE_DIRS
     ${CMAKE_CURRENT_LIST_DIR}
 )
 
+set(OPEN_RIVAL_INTERFACE_EXTRACTOR_PRECOMPILED_HEADERS
+    ${CMAKE_CURRENT_LIST_DIR}/pch.h
+)
+
 # Creates the target
 add_executable(interface-extractor
     ${OPEN_RIVAL_INTERFACE_EXTRACTOR_EXTERNAL_SOURCES}
@@ -34,4 +38,8 @@ add_executable(interface-extractor
 target_include_directories(interface-extractor PUBLIC
     ${OPEN_RIVAL_INTERFACE_EXTRACTOR_INCLUDE_DIRS}
     ${OPEN_RIVAL_INTERFACE_EXTRACTOR_EXTERNAL_DIRS}
+)
+
+target_precompile_headers(interface-extractor PRIVATE
+    ${OPEN_RIVAL_INTERFACE_EXTRACTOR_PRECOMPILED_HEADERS}
 )
