fix: apply compiler warnings to the projects
Signed-off-by: Ricardo Benítez <benitezc.ricardo@gmail.com>

--- a/projects/Open-Rival/CMakeLists.txt
+++ b/projects/Open-Rival/CMakeLists.txt
@@ -321,6 +321,8 @@ target_link_libraries(Open-Rival PRIVATE
     SDL2_image
     winmm
     Ws2_32
+    project_options
+    project_warnings
 )
 
 target_precompile_headers(Open-Rival PRIVATE
