--- a/projects/image-extractor/CMakeLists.txt
+++ b/projects/image-extractor/CMakeLists.txt
@@ -43,6 +43,11 @@ target_include_directories(image-extractor PUBLIC
     ${OPEN_RIVAL_IMAGE_EXTRACTOR_EXTERNAL_DIRS}
 )
 
+target_link_libraries(image-extractor PRIVATE
+    project_options
+    project_warnings
+)
+
 target_precompile_headers(image-extractor PRIVATE
     ${OPEN_RIVAL_IMAGE_EXTRACTOR_PRECOMPILED_HEADERS}
 )
