--- a/projects/audio-extractor/CMakeLists.txt
+++ b/projects/audio-extractor/CMakeLists.txt
@@ -12,6 +12,10 @@ set(OPEN_RIVAL_AUDIO_EXTRACTOR_SOURCES
     ${CMAKE_CURRENT_LIST_DIR}/pch.cpp
 )
 
+set(OPEN_RIVAL_AUDIO_EXTRACTOR_EXTERNAL_INCLUDE_HEADERS
+    ${CMAKE_CURRENT_LIST_DIR}/../setup/include/audio-extractor.h
+)
+
 set(OPEN_RIVAL_AUDIO_EXTRACTOR_INCLUDE_DIRS
     ${CMAKE_CURRENT_LIST_DIR}
 )
@@ -24,6 +28,7 @@ set(OPEN_RIVAL_AUDIO_EXTRACTOR_PRECOMPILED_HEADERS
 add_executable(audio-extractor
     ${OPEN_RIVAL_AUDIO_EXTRACTOR_EXTERNAL_SOURCES}
     ${OPEN_RIVAL_AUDIO_EXTRACTOR_SOURCES}
+    ${OPEN_RIVAL_AUDIO_EXTRACTOR_EXTERNAL_INCLUDE_HEADERS}
 )
 
 target_include_directories(audio-extractor PUBLIC
