--- a/projects/campaign-extractor/CMakeLists.txt
+++ b/projects/campaign-extractor/CMakeLists.txt
@@ -19,6 +19,14 @@ set(OPEN_RIVAL_CAMPAIGN_EXTRACTOR_INCLUDE_DIRS
     ${CMAKE_CURRENT_LIST_DIR}
 )
 
+set(OPEN_RIVAL_CAMPAIGN_EXTRACTOR_INCLUDE_HEADERS
+    ${CMAKE_CURRENT_LIST_DIR}/campaign-extractor.h
+)
+
+set(OPEN_RIVAL_CAMPAIGN_EXTRACTOR_EXTERNAL_INCLUDE_HEADERS
+    ${CMAKE_CURRENT_LIST_DIR}/../Open-Rival/include/FileUtils.h
+)
+
 set(OPEN_RIVAL_CAMPAIGN_EXTRACTOR_PRECOMPILED_HEADERS
     ${CMAKE_CURRENT_LIST_DIR}/pch.h
 )
@@ -27,6 +35,8 @@ set(OPEN_RIVAL_CAMPAIGN_EXTRACTOR_PRECOMPILED_HEADERS
 add_executable(campaign-extractor
     ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_EXTERNAL_SOURCES}
     ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_SOURCES}
+    ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_INCLUDE_HEADERS}
+    ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_EXTERNAL_INCLUDE_HEADERS}
 )
 target_include_directories(campaign-extractor PUBLIC
     ${OPEN_RIVAL_CAMPAIGN_EXTRACTOR_INCLUDE_DIRS}
